Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.help.master\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-02-23 14:00+0000\n"
-"PO-Revision-Date: 2010-02-23 20:19+0100\n"
+"PO-Revision-Date: 2010-02-25 20:26+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -511,6 +511,8 @@ msgid ""
 "CRT monitors have native gamma around 2.4 - 2.5 and LCD monitors usually "
 "emulate the same value."
 msgstr ""
+"Los monitores CRT tiene una gamma negativa entre 2.4 y 2.5 y los monitores "
+"LCD generalmente emulan el mismo valor."
 
 #: C/gnome-color-manager.xml:306(para)
 msgid ""
@@ -657,6 +659,9 @@ msgid ""
 "GNOME Color Manager relies on ArgyllCMS to support measurement devices. Thus "
 "the following display calibrators are supported:"
 msgstr ""
+"El Gestor de color de GNOME depende de ArgyIICMS para soportar la medición "
+"de dispositivos. Por eso los siguientes dispositivos de calibración están "
+"soportados:"
 
 #: C/gnome-color-manager.xml:462(para)
 msgid "Gretag-Macbeth Eye-One Pro"
